# MarketPlace

./: README.md  docker-compose-dev.yaml  docker-compose-test.yaml  prometheus.yml
.github/workflows/: ci.yml
backend/: Dockerfile_backend  Dockerfile_backend_test  main.py  pyproject.toml  settings.py
backend/api/: base_schemas.py
backend/api/actions/: products.py
backend/api/products/: handlers.py  schemas.py
backend/db/elasticsearch/: indexes.py  migration.py  migrations.py  session.py
backend/tests/: conftest.py  db_es_test.py  test_data.py
backend/tests/test_handlers_products/: test_create_products.py  test_get_products.py
backend/tests/test_handlers_products/test_get_products_handlers/: test_get_all_products.py  test_get_products.py  test_get_products_by_category.py  test_get_products_by_company_id.py  test_get_products_by_match_description.py  test_get_products_by_scroll_id.py  test_get_products_using_filter.py
