[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["LyaKakoyPC <LYAKAKOYXY@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
aiohttp = "^3.9.1"
elasticsearch = "^8.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
